--- a/frontend/src/app/document-list/document-list.html
+++ b/frontend/src/app/document-list/document-list.html
@@ -1,1 +1,9 @@
-<p>document-list works!</p>
+<h2>Documents</h2>
+
+<div *ngFor="let d of docs">
+  <p>{{ d.fileName }}</p>
+  <a [href]="d.blobUrl" target="_blank">Download</a>
+  <hr>
+</div>
+
+<a routerLink="/">Back</a>
