feat(frontend): add upload and document list components

--- a/frontend/src/app/components/upload/upload.html
+++ b/frontend/src/app/components/upload/upload.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div style="padding:20px">
   <h2>Upload Document</h2>
 
   <input type="file" (change)="onFileSelected($event)" />
 
-  <button mat-raised-button color="primary"
-          (click)="upload()"
-          [disabled]="!selectedFile">
+  <br><br>
+
+  <button (click)="upload()" [disabled]="!selectedFile">
     Upload
   </button>
 </div>
